test/parser/var-decl-no-id.cx
// RUN: %not %cx -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:5: error: expected identifier, got number
var 1
